# cURLDemoForAndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/org/oz/demo/: ExampleInstrumentedTest.java
app/src/androidTest/java/org/oz/demo/ui/main/: MainViewModelTest.groovy
app/src/main/: AndroidManifest.xml
app/src/main/java/org/oz/demo/: MainActivity.java
app/src/main/java/org/oz/demo/ui/main/: IMainModel.java  MainFragment.java  MainModel.java  MainViewModel.java
app/src/main/res/layout/: main_fragment.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/oz/demo/: ExampleUnitTest.java
curl/: build.gradle
curl/src/androidTest/java/org/oz/curl/: ExampleInstrumentedTest.java
curl/src/main/: AndroidManifest.xml
curl/src/main/cpp/: CMakeLists.txt
curl/src/main/cpp/curl/: CMakeLists.txt  test.cpp
curl/src/main/cpp/utils/: ThreadPool.h  log.h  log.hpp
curl/src/main/java/org/oz/curl/: Test.java
curl/src/test/java/org/oz/curl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
